<resources>
    <string name="app_name">My Design</string>
    <string name="btn_all_design">All Design  </string>
    <string name="toolbar_title_settings">Settings </string>
    <string name="list_item_lan_settings">language Setting</string>
    <string name="lang_dialog_title">Select Language </string>
    <string name="lang_dialog_message">Do You Change Language ?</string>
    <string name="language_setting">Language Change </string>
    <string name="alert_dialog_change_text">Change </string>
    <string name="alert_dialog_cancel_message">Cancel </string>
    <string name="design_list">All Design</string>
    <string name="main_design_page">Main Design Page</string>
    <string name="more_apps">More Apps</string>
    <string name="rate_my_app">Rate My App</string>
    <string name="eid_design_page">EID Design Page</string>
    <string name="all_design_list">All Design List</string>
    <string name="weeding_design_page">Weeding Design Page</string>
    <string name="hand_design_page">Hand Design Page</string>
    <string name="latest_design_page">Latest Design Page</string>
    <string name="leg_design_page">Leg Design Page</string>
    <string name="eid_design">EID Design</string>
    <string name="weeding_design">Weeding Design</string>
    <string name="hand_design">Hand Design</string>
    <string name="leg_design">Leg Design</string>
    <string name="latest_design">Latest Design</string>


    <string-array name="lang_select">
        <item>Select Language</item>
        <item>বাংলা</item>
        <item>English</item>
    </string-array>

    <string name="intersitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="reward_id">ca-app-pub-4824494878097656/8403117409</string>
</resources>
