<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity"
    android:background="@drawable/mdesign"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_main_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <!--<ImageView-->
                <!--android:id="@+id/imgv_home"-->
                <!--android:layout_width="25dp"-->
                <!--android:layout_height="25dp"-->
                <!--android:background="@drawable/ic_home"-->
                <!--/>-->
                <TextView
                    android:id="@+id/txv_toolbar_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_design_page"
                    android:textSize="22dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <com.google.android.gms.ads.AdView
            android:id="@+id/banner_AdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_id"
            android:layout_marginTop="50dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"

            >
            <Button
                android:id="@+id/btn_all_design"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/btn_all_design"
                android:layout_gravity="center"
                android:textSize="18dp"
                />
            <Button
                android:id="@+id/btn_more_apps"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_below="@+id/btn_all_design"
                android:text="@string/more_apps"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Button.Colored"
                android:theme="@style/Facebook.Button"
                android:textSize="18dp"
                />
            <Button
                android:id="@+id/btn_rate"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_below="@+id/btn_more_apps"
                android:text="@string/rate_my_app"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Button.Colored"
                android:theme="@style/Facebook.Button"
                android:textSize="18dp"
                />
        </LinearLayout>

    </RelativeLayout>




</LinearLayout>
